Add app to the api on plain python objects.

--- a/src/annodize/annodize.ipynb
+++ b/src/annodize/annodize.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    import IPython, sys, pyld, types, inspect, pathlib, abc, itertools, urllib, importnb,contextlib, collections, requests_file, requests_cache, fnmatch, traitlets, mimetypes, operator, importlib, requests, requests_cache, urllib, ast, abc,  itertools, mimetypes, io, functools, typing\n",
+    "    import IPython, sys, pyld, types, inspect, pathlib, importlib_resources, abc, itertools, urllib, importnb,contextlib, collections, requests_file, requests_cache, fnmatch, traitlets, mimetypes, operator, importlib, requests, requests_cache, urllib, ast, abc,  itertools, mimetypes, io, functools, typing\n",
     "    if __name__ == '__main__':\n",
     "        %reload_ext pidgin\n",
     "    shell = get_ipython()\n",
     "    CTX, ANNO = '@context __annotations__'.split()\n",
-    "    __all__ = 'context', "
+    "    __all__ = 'context', 'app'"
    ]
   },
   {
@@ -22,7 +22,7 @@
     {
      "data": {
       "text/html": [
-       "<h2 id=\"Mime-formatting-session\">Mime formatting session</h2"
+       "<h2>Mime formatting session</h2>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -83,7 +83,13 @@
     "        mimetypes = traitlets.Instance(mimetypes.MimeTypes)\n",
     "        \n",
     "        @traitlets.default('mimetypes')\n",
-    "        def _default_mimetypes(Mime): return mimetypes.MimeTypes()\n",
+    "        def _default_mimetypes(Mime): \n",
+    "            mimetypes = __import__('mimetypes').MimeTypes()\n",
+    "            try:\n",
+    "                with importlib_resources.path('annodize', 'base.types') as path: mimetypes.read(path)\n",
+    "            except:\n",
+    "                if __name__ == '__main__': mimetypes.read('base.types')\n",
+    "            return mimetypes\n",
     "        \n",
     "        adapter_list = traitlets.List()\n",
     "        @traitlets.default('adapter_list')\n",
@@ -104,7 +110,7 @@
     "            except KeyError: ...\n",
     "            return response            \n",
     "        \n",
-    "        def __call__(AnnotationFormatter, object, ctx = None):\n",
+    "        def __call__(AnnotationFormatter, object, ctx=None, name=None):\n",
     "            return AnnotationFormatter.get(expand(treat_path(object), ctx or AnnotationFormatter.parent.user_ns.get(ANNO, {}))\n",
     "                                          ) if isinstance(object, str) else object\n",
     "        \n",
@@ -165,7 +171,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "        def annotate_annotations(shell, object=None):\n",
+    "        def annotate_annotations(shell, object=None, state_manager=False):\n",
+    "            if hasattr(object, 'app'): \n",
+    "                IPython.display.display(object.app)\n",
+    "                return\n",
     "            if object is None: object = shell.user_module\n",
     "            if not hasattr(object, ANNO): return\n",
     "            shell_context = dict(shell.user_ns.get(ANNO, {})).get(CTX, {})\n",
@@ -175,17 +184,30 @@
     "            for key, value in annotations.items():\n",
     "                if isinstance(value, str):\n",
     "                    annotations[key] = treat_path(value)\n",
-    "                if not isinstance(key, str): different[key] = value\n",
-    "                else: context[key] = {\"@type\": \"@vocab\", \"@id\": F\"\"\"file://{shell.kernel.parent.connection_file}?name={key}\"\"\"}                                    \n",
+    "                    context[key] = {\"@type\": \"@vocab\", \"@id\": F\"\"\"file://{shell.kernel.parent.connection_file}?name={key}\"\"\"}                                    \n",
+    "                else:\n",
+    "                    different[key] = value\n",
+    "                    if state_manager:\n",
+    "                        state_manager.add_traits(**{key: value})\n",
+    "                        widget = ipywidgets.interactive.widget_from_abbrev(value)\n",
+    "                        if not widget:\n",
+    "                            widget = ValueOutput(value=value)\n",
+    "                        widget.description = key\n",
+    "                        if hasattr(widget, 'value'):\n",
+    "                            state_manager.link((widget, 'value'), key)                        \n",
+    "                        IPython.display.display(widget)\n",
+    "            for key in different: \n",
+    "                if key in annotations: annotations.pop(key)\n",
     "                    \n",
-    "            for key in different: annotations.pop(key)\n",
     "            expand = pyld.jsonld.expand({CTX: context, **annotations})\n",
     "            if expand:\n",
     "                for key, value in expand[0].items():\n",
     "                    key, value = get_name(key), value[0]['@id']\n",
-    "                    IPython.display.display(IPython.display.Markdown(F\"#### [{key}]({value})\"),shell.annotation_formatter(value, ctx=context))\n",
-    "                return\n",
-    "            else: ..."
+    "                    IPython.display.display(IPython.display.Markdown(F\"#### [{key}]({value})\"), \n",
+    "                                            shell.annotation_formatter(value, ctx=context))\n",
+    "            if different:\n",
+    "                for key, value in different.items():\n",
+    "                    IPython.display.display(shell.annotation_formatter(value, ctx=context))"
    ]
   },
   {
@@ -194,8 +216,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "    import ipywidgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    class ValueOutput(ipywidgets.Output):\n",
+    "        description = traitlets.Unicode()\n",
+    "        value = traitlets.Any()\n",
+    "        @traitlets.observe('value')\n",
+    "        def _observe_value(ValueOutput, change):\n",
+    "            with ValueOutput:\n",
+    "                IPython.display.display(change['new'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    def load_ipython_extension(shell):\n",
-    "        shell.add_traits(annotation_formatter=traitlets.Instance(AnnotationFormatter, tuple(), {'parent': shell}, allow_none=True))\n",
+    "        shell.add_traits(annotation_formatter=traitlets.Instance(AnnotationFormatter, tuple(), {'parent': shell,}, allow_none=True))\n",
     "        shell.display_formatter.mimebundle_formatter.for_type(types.ModuleType, functools.partial(annotate_annotations, shell))   \n",
     "        shell.display_formatter.mimebundle_formatter.for_type(type, functools.partial(annotate_annotations, shell))           \n",
     "        shell.display_formatter.mimebundle_formatter.for_type(requests.Response, show_anno_response)   "
@@ -203,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +284,13 @@
     "        def wrap(callable=None):\n",
     "            nonlocal context\n",
     "            if files:\n",
-    "                for file in files:\n",
-    "                    with open(file) as file:\n",
-    "                        context.update(__import__('json').load(file))\n",
+    "                for name in files:\n",
+    "                    with open(name) as file:\n",
+    "                        if name.endswith(('yaml', 'yml')):\n",
+    "                            try: import ruamel.yaml as yaml\n",
+    "                            except ModuleNotFoundError: import yaml\n",
+    "                            context.update(yaml.safe_load(file))\n",
+    "                        else: context.update(__import__('json').load(file))\n",
     "            if callable is None: return context\n",
     "            annotations = getattr(callable, ANNO, {})\n",
     "            context = {**annotations.pop(CTX, {}), **context}\n",
@@ -248,6 +298,88 @@
     "            return callable\n",
     "        return wrap\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    class app(traitlets.HasTraits):\n",
+    "        \"\"\"\n",
+    "    >>> @app\n",
+    "    ... class X:\n",
+    "    ...     x: 10\n",
+    "    >>> X.app\n",
+    "    <traitlets.traitlets.app...>\n",
+    "    >>> X.app.widgets\n",
+    "    {'x': IntSlider(value=10, description='x', max=30, min=-10)}\n",
+    "    \n",
+    "    \"\"\"\n",
+    "        \n",
+    "        def __new__(cls, object):\n",
+    "            annotations = getattr(object, '__annotations__', {})\n",
+    "            object.app = traitlets.HasTraits.__new__(app)\n",
+    "            app.__init__(object.app, parent=object, shell=IPython.get_ipython())\n",
+    "            for key, value in annotations.items():\n",
+    "                object.app.add_traits(**{key: traitlets.Any})\n",
+    "                object.app.observe(object.app.update_global, key)\n",
+    "                setattr(object.app, key, getattr(object, key, value))\n",
+    "                value = getattr(object.app, key)\n",
+    "                widget = None\n",
+    "                if isinstance(value, str):\n",
+    "                    widget = ValueOutput(value=shell.annotation_formatter(value, annotations.get('@context', {})))\n",
+    "                    if widget.value is None: widget.value = value\n",
+    "                else:\n",
+    "                    widget = ipywidgets.interactive.widget_from_abbrev(value)\n",
+    "                if widget is None:\n",
+    "                    widget = ValueOutput(value=value)\n",
+    "                object.app.widgets[key] = widget\n",
+    "                widget.description = key\n",
+    "                object.app.link((widget, 'value'), key)                \n",
+    "            return object\n",
+    "                \n",
+    "        def update_global(State, change):\n",
+    "            setattr(State.parent, change['name'], change['new'])                \n",
+    "        \n",
+    "        shell = traitlets.Any()\n",
+    "        parent = traitlets.Any()\n",
+    "        widgets = traitlets.Dict()\n",
+    "        \n",
+    "        def __init__(State, **kwargs):\n",
+    "            super().__init__(**kwargs)\n",
+    "            if State.parent is None:\n",
+    "                State.parent = IPython.get_ipython().user_module\n",
+    "                State.parent.events.register('post_execute', State.post_execute)\n",
+    "            \n",
+    "        def post_execute(State):\n",
+    "            traits = State.traits()\n",
+    "            for key in State.parent.user_ns:\n",
+    "                if key in traits: setattr(State, key, State.parent.user_ns[key])\n",
+    "            \n",
+    "        def add_traits(State, **traits):\n",
+    "            current = State.traits()\n",
+    "            for key in traits:\n",
+    "                if key not in current:\n",
+    "                    value = traits[key]\n",
+    "                    if isinstance(value, traitlets.HasDescriptors): super().add_traits(**{key: value})\n",
+    "                    else: super().add_traits(**{key: traitlets.Any()})\n",
+    "                    State.observe(State.update_global, key)\n",
+    "                    setattr(State, key, getattr(value, 'default_value', value))\n",
+    "                    \n",
+    "            \n",
+    "        def dlink(State, object, name, callable=None):\n",
+    "            State.add_traits(**{name: getattr(*object)})\n",
+    "            traitlets.dlink(object, (State, name), callable)\n",
+    "            return object\n",
+    "        \n",
+    "        def link(State, object, name):\n",
+    "            State.add_traits(**{name: getattr(*object)})\n",
+    "            traitlets.link(object, (State, name))\n",
+    "            return object\n",
+    "        \n",
+    "        def _ipython_display_(State): IPython.display.display(*State.widgets.values())"
    ]
   }
  ],
