--- a/src/annodize/annodize.ipynb
+++ b/src/annodize/annodize.ipynb
@@ -2,13 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    import IPython, sys, pyld, types, inspect, pathlib, importlib_resources, abc, itertools, urllib, importnb,contextlib, collections, requests_file, requests_cache, fnmatch, traitlets, mimetypes, operator, importlib, requests, requests_cache, urllib, ast, abc,  itertools, mimetypes, io, functools, typing\n",
-    "    if __name__ == '__main__':\n",
-    "        %reload_ext pidgin\n",
+    "    import IPython, sys, pyld, types, inspect, ipywidgets, pathlib, importlib_resources, abc, itertools, urllib, importnb,contextlib, collections, requests_file, requests_cache, fnmatch, traitlets, mimetypes, operator, importlib, requests, requests_cache, urllib, ast, abc,  itertools, mimetypes, io, functools, typing\n",
     "    shell = get_ipython()\n",
     "    CTX, ANNO = '@context __annotations__'.split()\n",
     "    __all__ = 'context', 'app'"
@@ -16,40 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<h2>Mime formatting session</h2>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "## Mime formatting session"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "    with __import__('importnb').Notebook():\n",
-    "        try: from . import adapters\n",
-    "        except: import adapters"
+    "        try: from . import adapters, formatters\n",
+    "        except: import adapters, formatters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,22 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    import ipywidgets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "    class ValueOutput(ipywidgets.Output):\n",
     "        description = traitlets.Unicode()\n",
     "        value = traitlets.Any()\n",
+    "        \n",
     "        @traitlets.observe('value')\n",
     "        def _observe_value(ValueOutput, change):\n",
     "            with ValueOutput:\n",
@@ -236,12 +204,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    shell.add_traits(annotation_formatter=traitlets.Instance(AnnotationFormatter, tuple(), {'parent': shell,}, allow_none=True))\n",
+    "    formatters.load_ipython_extension(shell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "    def load_ipython_extension(shell):\n",
-    "        shell.add_traits(annotation_formatter=traitlets.Instance(AnnotationFormatter, tuple(), {'parent': shell,}, allow_none=True))\n",
+    "        \n",
     "        shell.display_formatter.mimebundle_formatter.for_type(types.ModuleType, functools.partial(annotate_annotations, shell))   \n",
     "        shell.display_formatter.mimebundle_formatter.for_type(type, functools.partial(annotate_annotations, shell))           \n",
     "        shell.display_formatter.mimebundle_formatter.for_type(requests.Response, show_anno_response)   "
@@ -249,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,17 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    if __name__ == '__main__':\n",
-    "        load_ipython_extension(get_ipython())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,13 +270,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    class app(traitlets.HasTraits):\n",
+    "    class interact(traitlets.HasTraits):\n",
     "        \"\"\"\n",
-    "    >>> @app\n",
+    "    >>> @interact\n",
     "    ... class X:\n",
     "    ...     x: 10\n",
     "    >>> X.app\n",
@@ -320,24 +288,35 @@
     "        \n",
     "        def __new__(cls, object):\n",
     "            annotations = getattr(object, '__annotations__', {})\n",
-    "            object.app = traitlets.HasTraits.__new__(app)\n",
-    "            app.__init__(object.app, parent=object, shell=IPython.get_ipython())\n",
+    "            object.app = traitlets.HasTraits.__new__(interact)\n",
+    "            object.app.__init__(parent=object, shell=IPython.get_ipython())\n",
     "            for key, value in annotations.items():\n",
-    "                object.app.add_traits(**{key: traitlets.Any})\n",
-    "                object.app.observe(object.app.update_global, key)\n",
+    "                if key == '@context': continue\n",
+    "                if not key in object.app.traits():\n",
+    "                    object.app.add_traits(**{key: traitlets.Any})\n",
+    "                    object.app.observe(object.app.update_global, key)\n",
     "                setattr(object.app, key, getattr(object, key, value))\n",
     "                value = getattr(object.app, key)\n",
     "                widget = None\n",
+    "                \n",
     "                if isinstance(value, str):\n",
-    "                    widget = ValueOutput(value=shell.annotation_formatter(value, annotations.get('@context', {})))\n",
-    "                    if widget.value is None: widget.value = value\n",
+    "                    value = shell.annotation_formatter(value, {\n",
+    "                        **getattr(shell.user_module, '__annotations__', {}).get('@context', {}),\n",
+    "                        **annotations.get('@context', {})})\n",
+    "                    if hasattr(value, 'callable'):\n",
+    "                        value = value.callable(value)                    \n",
+    "                    widget = ValueOutput()\n",
+    "                    widget.value = value\n",
+    "                    with widget:\n",
+    "                        IPython.display.display(value)\n",
     "                else:\n",
     "                    widget = ipywidgets.interactive.widget_from_abbrev(value)\n",
-    "                if widget is None:\n",
-    "                    widget = ValueOutput(value=value)\n",
+    "                    if widget is None: widget = ValueOutput(value=value)\n",
+    "                    widget.description = key\n",
+    "                    object.app.link((widget, 'value'), key)  \n",
     "                object.app.widgets[key] = widget\n",
-    "                widget.description = key\n",
-    "                object.app.link((widget, 'value'), key)                \n",
+    "                \n",
+    "            object.app.__all__ = tuple(annotations)\n",
     "            return object\n",
     "                \n",
     "        def update_global(State, change):\n",
