Add trait to union type value.

--- a/src/annodize/annodize.ipynb
+++ b/src/annodize/annodize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,18 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "    with __import__('importnb').Notebook():\n",
-    "        try: from . import formatters\n",
-    "        except: import formatters"
+    "        try: from . import formatters, schema\n",
+    "        except: import formatters, schema"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,13 +84,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    class Links:\n",
-    "        \"\"\"Initialize traitlet linkages for an interface.\"\"\"\n",
+    "    class Link:\n",
+    "        \"\"\"An Interface will Link traits together.\"\"\"\n",
+    "\n",
+    "        def add_linkages(Interface, **traits):\n",
+    "            context = Interface.ctx\n",
+    "            traits.pop(CTX, None)\n",
+    "            for key, value in traits.items():\n",
+    "                display = Interface._display_key_value(key, value, context)\n",
+    "                Interface.observe(Interface._update_object, key)\n",
+    "            Interface._default_linked_functions()\n",
+    "            \n",
+    "        def _post_execute(Interface): [\n",
+    "            not isinstance(getattr(Interface, key), Function) and hasattr(Interface.object, key) and setattr(Interface, key, getattr(Interface.object, key)) \n",
+    "            for key in Interface.traits()]\n",
+    "\n",
+    "        def _update_object(Interface, change): setattr(Interface.object, change['name'], change['new'])\n",
+    "        \n",
     "        def _display_key_value(Interface, key, value, context=None):\n",
+    "            \"\"\"Link._display_key_value dispatches linkages for Widgets, Unions, Functions, and objects\"\"\"\n",
     "            if isinstance(value, str) and (Interface.parent.has_trait(value) or key == RTN): \n",
     "                display = Interface.parent, value\n",
     "            elif isinstance(value, str) and Interface.has_trait(value): display = Interface, value\n",
@@ -101,18 +117,31 @@
     "             or Interface._link_default)(key, value, display, context)\n",
     "            return display\n",
     "        \n",
+    "        def _link_widget(Interface, key, value, display, context):\n",
+    "            \"Link widget displays to the Interface\"\n",
+    "            display.description = key\n",
+    "            Interface.widgets[key] = display\n",
+    "            if isinstance(display, ipywidgets.Output): setattr(Interface.object, key, display)\n",
+    "            else:\n",
+    "                if hasattr(display, 'value'):\n",
+    "                    if getattr(Interface, key) is not None: traitlets.dlink((Interface, key), (display, 'value'))\n",
+    "                    traitlets.dlink((display, 'value'), (Interface, key))\n",
+    "                    traitlets.dlink((Interface, key), (display, 'value'))\n",
+    "                    \n",
     "        def _link_default(Interface, key, value, display, context):\n",
+    "            \"\"\"Link non widget objects to the interface.\"\"\"\n",
     "            if is_linkage(display):\n",
     "                if not display[0].has_trait(display[1]): \n",
     "                    display[0].add_traits(**{display[1]: traitlets.Any()})\n",
-    "                container = getattr(display[0], '_container', {})\n",
-    "                Interface._container[key] = Display(container[display[1]] if display[1] in container else getattr(*display), key)\n",
+    "                container = getattr(display[0], 'widgets', {})\n",
+    "                Interface.widgets[key] = Display(container[display[1]] if display[1] in container else getattr(*display), key)\n",
     "                if key == RTN: traitlets.dlink((Interface, key), display)\n",
     "                else: traitlets.dlink(display, (Interface, key))\n",
-    "            else: Interface._container[key] = Display(value, key)\n",
-    "            traitlets.dlink((Interface, key), (Interface._container[key], 'value'))\n",
+    "            else: Interface.widgets[key] = Display(value, key)\n",
+    "            traitlets.dlink((Interface, key), (Interface.widgets[key], 'value'))\n",
     "            \n",
     "        def _link_union(Interface, key, value, display, context):\n",
+    "            \"\"\"Create linkages for Union types containing interactive and static type information.\"\"\"\n",
     "            value = []\n",
     "            for arg in display.__args__:\n",
     "                if not isinstance(arg, type):\n",
@@ -122,68 +151,34 @@
     "                    if is_linkage(arg): \n",
     "                        traitlets.dlink(arg, (Interface, key))\n",
     "                        traitlets.dlink((Interface, key), arg)\n",
-    "            Interface._container[key] = MultiDisplay(*value)\n",
-    "\n",
-    "        def _link_widget(Interface, key, value, display, context):\n",
-    "            display.description = key\n",
-    "            Interface._container[key] = display\n",
-    "            if getattr(Interface, key) is not None: traitlets.dlink((Interface, key), (display, 'value'))\n",
-    "            traitlets.dlink((display, 'value'), (Interface, key))\n",
-    "            traitlets.dlink((Interface, key), (display, 'value'))                \n",
-    "\n",
-    "        def add_linkages(Interface, **traits):\n",
-    "            context = Interface.ctx\n",
-    "            traits.pop(CTX, None)\n",
-    "            for key, value in traits.items():\n",
-    "                display = Interface._display_key_value(key, value, context)\n",
-    "                Interface.observe(Interface._update_object, key)\n",
+    "            else:\n",
+    "                value.append(Display(value, key))\n",
+    "                traitlets.dlink((Interface, key), (value[-1], 'value'))\n",
+    "            Interface.widgets[key] = MultiDisplay(*value)\n",
     "                \n",
     "        def _default_linked_functions(Interface):\n",
+    "            \"\"\"Link._default_linked_functions extracts annotated functions as edges in the Interface graph.\"\"\"\n",
     "            for key in dir(Interface.object):\n",
     "                value = getattr(Interface.object, key)\n",
     "                if inspect.isfunction(value) and getattr(value, ANNO, None) and key[0].isalpha():\n",
-    "                    setattr(Interface, key, Function(value, parent=Interface))"
+    "                    setattr(Interface, key, Function(value, parent=Interface))\n",
+    "                    Interface.widgets[key] = getattr(Interface, key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    class ToSchema:\n",
-    "        \"\"\"Schema inference for traits.\"\"\"\n",
-    "        def to_schema(self, name=None, **object):\n",
-    "            annotations = dict(collections.ChainMap(self._implicit, self._explicit))\n",
-    "            annotations.pop(CTX, None)\n",
-    "            object.update({ANNO: annotations})\n",
-    "            for key in self.traits():\n",
-    "                if key[0].isalpha() and key not in dir(Interface):\n",
-    "                    if key not in object: object[key] = getattr(self.object, key, getattr(self, key))\n",
-    "                    if key not in annotations:\n",
-    "                        if key in getattr(self.object, ANNO, {}): annotations[key] = self.object.__annotations__[key]\n",
-    "            return type(name or '__main__', (__import__('pydantic').BaseModel,), object).schema()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    class Interface(traitlets.HasTraits, Links, ToSchema):\n",
-    "            \n",
+    "    class Interface(traitlets.HasTraits, Link, schema.ToSchema):\n",
     "        shell = traitlets.Instance(IPython.InteractiveShell, help=\"A parent shell that will update object value post_execute.\", allow_none=True)\n",
-    "        def _post_execute(Interface): [\n",
-    "            not isinstance(getattr(Interface, key), Function) and hasattr(Interface.object, key) and setattr(Interface, key, getattr(Interface.object, key)) \n",
-    "            for key in Interface.traits()]\n",
-    "\n",
     "        parent = traitlets.Any(help=\"The parent interface provides links to external objects.\")\n",
-    "        type = traitlets.Any()\n",
-    "        object = traitlets.Any()\n",
-    "        ctx = traitlets.Dict(allow_none=True)\n",
+    "        type = traitlets.Any(help=\"An object containing context-free static type information.\")\n",
+    "        object = traitlets.Any(help=\"An object containing context-dependent interactive type information\")\n",
+    "        ctx = traitlets.Dict(allow_none=True, help=\"A valid json ld context\")\n",
     "        display_formatter = traitlets.Instance(IPython.core.formatters.BaseFormatter, allow_none=True)\n",
-    "        _container = traitlets.Dict(help=\"A named container of display objects for the annotations.\")\n",
+    "        widgets = traitlets.Dict(help=\"A named container of display objects for the annotations.\")\n",
     "        def __init__(Interface, value=None, **kwargs):\n",
     "            kwargs['object'] = kwargs.get('object', value)\n",
     "            super().__init__(**kwargs)\n",
@@ -201,8 +196,8 @@
     "        def _init_display_formatter(Interface):\n",
     "            Interface.display_formatter = formatters.RequestFormatter()\n",
     "            Interface.display_formatter.for_type(object, lambda object: ipywidgets.interactive.widget_from_abbrev(object) or object)            \n",
-    "        def _ipython_display_(Interface): IPython.display.display(*Interface._container.values())\n",
-    "        def _update_object(Interface, change): setattr(Interface.object, change['name'], change['new'])\n",
+    "            \n",
+    "        def _ipython_display_(Interface): IPython.display.display(*Interface.widgets.values())\n",
     "                \n",
     "        @property\n",
     "        def _explicit(Interface): return {k:v for k,v in getattr(Interface.type, ANNO, {}).items()}\n",
@@ -213,7 +208,6 @@
     "            super().add_traits(**Interface._patch_non_traits(**object))\n",
     "            with IPython.utils.capture.capture_output(stderr=False, stdout=False):\n",
     "                Interface.add_linkages(**(object or collections.ChainMap(Interface._implicit, Interface._explicit)))\n",
-    "                Interface._default_linked_functions()\n",
     "        \n",
     "        def _patch_non_traits(Interface, **object):\n",
     "            \"\"\"Supplies traitlets for types basic on interactive and static types.\"\"\"\n",
@@ -222,20 +216,20 @@
     "            traits = dict(object or collections.ChainMap(explicit, implicit))\n",
     "            traits.pop(CTX, None)\n",
     "            for key, value in traits.items():\n",
-    "                if not isinstance(value, traitlets.HasTraits):\n",
+    "                if not isinstance(value, traitlets.HasTraits) or isinstance(value, ipywidgets.Widget):\n",
     "                    default = getattr(Interface.object, key, getattr(Interface.type, key, None)) \n",
     "                    typ = explicit.get(key, implicit.get(key, None))\n",
     "                    if isinstance(typ, (type, Union)):\n",
     "                        union_types = [t for t in getattr(typ, '__args__', (typ,)) if isinstance(t, type)]\n",
     "                        if union_types: traits[key] = traitlets.Union(tuple(traitlets.Instance(t) for t in union_types), default_value=default, allow_none=True)\n",
     "                        else: traits[key]  =traitlets.Any(default)\n",
-    "                    else: traits[key] = traitlets.Any(default)   \n",
+    "                    else: traits[key] = traitlets.Any(default)\n",
     "            return traits\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,37 +250,13 @@
     "            explicit, implicit = Function._explicit, Function._implicit\n",
     "            object = dict(object or collections.ChainMap(explicit, implicit))\n",
     "            object[RTN] = object.get(RTN, None)\n",
-    "            \n",
     "            super().add_traits(**object)\n",
-    "            if isinstance(object[RTN], str):  \n",
-    "                object[RTN] = Function.parent, object[RTN]\n",
+    "            if isinstance(object[RTN], str):  object[RTN] = Function.parent, object[RTN]\n",
     "            if is_linkage(object[RTN]): \n",
     "                display = object[RTN]\n",
     "                display[0].has_trait(display[1]) or display[0].add_traits(**{display[1]: traitlets.Any()})\n",
-    "                traitlets.dlink((Function, RTN), display)\n",
-    "            \n"
+    "                traitlets.dlink((Function, RTN), display)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -309,5 +279,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
